# TreeLikeApp

./: .dockerignore  .env  .env.example  Dockerfile  README.md  db.json  docker-compose.yml  entrypoint.sh  manage.py  nginx.conf  pyproject.toml
TreeLikeApp/: asgi.py  loguru_django.py  settings.py  urls.py  wsgi.py
three/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
three/migrations/: 0001_initial.py
